# internals/model/cart/cart.go
@@ -1,0 +1,8 @@
+package cart
+
+type Request struct {
+	Name   string
+	Detail string
+	Brand  string
+	Price  string
+}
